# ansible-dc-lan-migration

./: .gitignore  .vault_pass  README.md  ansible.cfg  pyproject.toml  requirements.yml
.github/: copilot-instructions.md
diagrams/: 1.0-provision-switches-logic.drawio  1.1-create-discovery-user-logic.drawio  1.2-provision-features-logic.drawio  1.3-deploy-vpc-domain-logic.drawio  1.4-provision-interfaces-logic.drawio  1.4-provision-vlan-policies-logic.drawio  1.5-provision-interfaces-logic.drawio  1.5-provision-vlan-policies-logic.drawio  1.6-provision-default-route-logic.drawio  1.7-check-poap-status-logic.drawio  1.7-provision-static-routes-logic.drawio  1.8-bootstrap-switches-logic.drawio  1.8-check-poap-status-logic.drawio  1.9-bootstrap-switches-logic.drawio
docs/: ansible-vault.md  uv-setup.md
inventory/: hosts.yml
inventory.example/: hosts.yml
inventory.example/group_vars/all/: common.yml  vault.yml
inventory.example/group_vars/nd/: connection.yml
inventory.example/host_vars/nexus_dashboard/: fabric_definitions.yml
inventory/group_vars/all/: vault.yml
inventory/group_vars/nd/: connection.yml
inventory/host_vars/nexus_dashboard/: fabric_definitions.yml
playbooks/: 01-profile-existing-switches.yml  02-configure-nd-fabric.yml  03-add-switches-to-nd-fabric.yml  04-configure-vlan-policies.yml  05-deploy-vpc-domain.yml  06-configure-interfaces.yml
playbooks/common/: build-fabric-paths.yml  ndfc-preflight-check.yml
playbooks/discovery/: 01-profile-existing-switches.yml  1.0-profile-existing-switches.yml
playbooks/provision-access/: 1.0-preprovision-new-switches.yml  1.1-preprovision-features.yml  1.2-preprovision-uplink-interfaces.yml  1.3-preprovision-portchannel.yml
playbooks/provision-fabric/: 02-configure-nd-fabric.yml  1.0-configure-nd-fabric.yml  1.0-provision-nd-fabrics.yml
playbooks/provision-switch/: 0.0-full-provision-switch.yml  1.0-preprovision-new-switches.yml  1.0-provision-switches.yml  1.1-create-discovery-user.yml  1.2-provision-features.yml  1.3-deploy-vpc-domain.yml  1.4-provision-interfaces.yml  1.4-provision-vlan-policies.yml  1.5-provision-interfaces.yml  1.5-provision-vlan-policies.yml  1.6-provision-default-route.yml  1.6-provision-vrf.yml  1.7-check-poap-status.yml  1.7-provision-static-routes.yml  1.8-bootstrap-switches.yml  1.8-check-poap-status.yml  1.9-bootstrap-switches.yml
templates/: 1.0-configure-nd-fabric-enhanced.j2  1.0-preprovision-new-switches.j2  1.0-profile-existing-switches-interfaces_inventory.j2  1.0-profile-existing-switches-logging_servers.j2  1.0-profile-existing-switches-static_routes.j2  1.0-profile-existing-switches-switch_details.j2  1.0-profile-existing-switches-switch_features.j2  1.0-profile-existing-switches-vlan_database.j2  1.0-profile-existing-switches-vpc_inventory.j2  1.0-profile-existing-switches-vrf_database.j2  1.1-create-discovery-user.j2  1.2-provision-features-feature_lookup.yml  1.2-provision-features.j2  1.3-deploy-vpc-domain.json.j2  1.4-provision-interfaces-eth.j2  1.4-provision-interfaces-eth.yml.j2  1.4-provision-interfaces-pc.j2  1.4-provision-interfaces-pc.yml.j2  1.4-provision-interfaces-svi.j2  1.4-provision-interfaces-vpc.j2  1.4-provision-interfaces-vpc.yml.j2  1.4-provision-vlan-policies.j2  1.5-provision-interfaces-eth.j2  1.5-provision-interfaces-pc.j2  1.5-provision-interfaces-svi-rest.j2  1.5-provision-interfaces-svi.j2  1.5-provision-interfaces-vpc.j2  1.5-provision-vlan-policies.j2  1.6-provision-default-route.j2  1.8-bootstrap-switches.j2  add_switches_to_fabric.json.j2  create_fabric.json.j2  deploy_vlans.yml.j2  feature_lookup.yml  interfaces_inventory.j2  interfaces_inventory.yml.j2  mgmt_interface.yml.j2  ndfc_interfaces.yml.j2  ndfc_preprovision_interfaces.json.j2  ndfc_vpc_interfaces.yml.j2  (+6 more)
