[project]
name = "ansible-dc-lan-migration"
description = "Ansible project to migrate from CLI managed devices to ND"
version = "0.1.1"
requires-python = ">=3.13"
authors = [
    { name = "Russell Johnston", email = "rujohns2@cisco.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["ansible", "automation", "infrastructure", "devops", "networking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

# Core Ansible dependencies
dependencies = [
    "ansible>=8.0.0",
    "ansible-core>=2.15.0",
    "ansible-lint>=6.0.0",
    "paramiko>=3.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "cryptography>=3.4.8",
    "pyats[full]",
    "genie",
    "requests",
    "ansible-pylibssh",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-ansible>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

# Network automation specific dependencies
network = [
    "netmiko>=4.2.0",
    "napalm>=4.1.0",
    "ncclient>=0.6.13",
    "pyntc>=0.0.7",
    "textfsm>=1.1.3",
    "ttp>=0.9.2",
]

# All optional dependencies combined
all = [
    "ansible-dc-lan-migration[dev,network]"
]

[project.urls]
Homepage = "https://github.com/rjohnston6/ansible-dc-lan-migration"
Documentation = "https://github.com/rjohnston6/ansible-dc-lan-migration/blob/main/README.md"
Repository = "https://github.com/rjohnston6/ansible-dc-lan-migration.git"
Issues = "https://github.com/rjohnston6/ansible-dc-lan-migration/issues"
Changelog = "https://github.com/rjohnston6/ansible-dc-lan-migration/blob/main/CHANGELOG.md"

# Note: No [build-system] section - this is an Ansible project, not a Python package
# UV will manage dependencies without trying to build/install the project itself

# ===========================
# Tool Configurations
# ===========================

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
# Exclude auto-generated files
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | roles/downloaded
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "roles/downloaded",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Exclude directories that commonly contain non-typed code
exclude = [
    "roles/downloaded/",
    "collections/",
    ".venv/",
    "build/",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
    "playbooks",  # For ansible-test integration
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "network: marks tests as network-related",
]

[tool.coverage.run]
source = [
    "playbooks",
    "roles",
    "plugins",
]
omit = [
    "*/tests/*",
    "*/test_*",
    "roles/downloaded/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ansible-lint]
# Ansible-lint configuration
exclude_paths = [
    ".cache/",
    ".github/",
    "roles/downloaded/",
    "collections/",
]

# Skip specific rules if needed
skip_list = [
    # "yaml[line-length]",  # Uncomment to skip long line warnings
    # "name[casing]",       # Uncomment to skip task naming casing rules
]

# Enable offline mode for CI/CD environments
offline = false

# Use specific Ansible version for linting
# ansible_core_version = "2.15"

# Note: Pre-commit configuration should be in .pre-commit-config.yaml file
# Pre-commit does not read configuration from pyproject.toml

# ===========================
# UV-specific configurations
# ===========================

[dependency-groups]
# Development dependencies for this project
dev = [
    "pytest>=7.0.0",
    "pytest-ansible>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ansible-lint>=6.0.0",
]

[tool.uv]
# Index configuration for UV
index-url = "https://pypi.org/simple"

# Constraint file for UV (optional)
# constraint = "constraints.txt"

# Resolution strategy
resolution = "highest"